<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ea656d"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Start" >

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="50dip"
        android:paddingTop="80dp"
        android:text="@string/logo_name"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/smalllogo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_name"
        android:paddingLeft="160dip"
        android:paddingTop="10dp"
        android:text="@string/smalllogo_name"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/image_email"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_email_content"
        android:paddingTop="280dp"
        android:src="@drawable/email_image" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/image_email"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/image_email"
        android:text="@string/textView_email"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_email"
        android:layout_marginLeft="13dp"
        android:layout_toRightOf="@+id/textView_email"
        android:background="#00000000"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/editText_email"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <ImageView
        android:id="@+id/image_cutLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/image_email"
        android:layout_below="@+id/image_email"
        android:layout_marginTop="5dp"
        android:background="@drawable/login_cutline"
        android:contentDescription="@string/image_cutLine_content" />

    <ImageView
        android:id="@+id/image_lock"
        android:layout_width="20dp"
        android:layout_height="18dp"
        android:layout_below="@+id/image_cutLine"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/image_lock_content"
        android:src="@drawable/lock_image" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_password"
        android:layout_marginLeft="13dp"
        android:layout_toRightOf="@+id/textView_password"
        android:background="#00000000"
        android:ems="10"
        android:hint="@string/editText_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image_lock"
        android:layout_toLeftOf="@+id/editText_email"
        android:text="@string/textView_password"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/image_cutLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/image_lock"
        android:layout_below="@+id/image_lock"
        android:layout_marginTop="12dp"
        android:background="@drawable/login_cutline"
        android:contentDescription="@string/image_cutLine_content" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignLeft="@+id/image_cutLine2"
        android:layout_below="@+id/image_cutLine2"
        android:layout_marginTop="40dp"
        android:background="@drawable/imagebutton_background"
        android:onClick="LoginClick"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/ProgressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/ProgressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:onClick="RegisterClick"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_cutLine3"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:background="@drawable/login_cutline"
        android:contentDescription="@string/image_cutLine_content" />

    <Button
        android:id="@+id/button_forgetPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_cutLine3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:text="@string/btn_forgetPwd"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>