<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ea656d"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Start" >

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="50dip"
        android:paddingTop="80dp"
        android:text="@string/logo_name"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/smalllogo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_name"
        android:paddingLeft="160dip"
        android:paddingTop="10dp"
        android:text="@string/smalllogo_name"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/image_email_register"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_email_content"
        android:paddingTop="280dp"
        android:src="@drawable/email_image" />

    <TextView
        android:id="@+id/textView_email_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/image_email_register"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/image_email_register"
        android:text="@string/textView_email"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_email_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_email_register"
        android:layout_marginLeft="13dp"
        android:layout_toRightOf="@+id/textView_email_register"
        android:background="#00000000"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/editText_email"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <ImageView
        android:id="@+id/image_cutLine_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/image_email_register"
        android:layout_below="@+id/image_email_register"
        android:layout_marginTop="5dp"
        android:background="@drawable/login_cutline"
        android:contentDescription="@string/image_cutLine_content" />

    <ImageView
        android:id="@+id/image_lock_register"
        android:layout_width="20dp"
        android:layout_height="18dp"
        android:layout_below="@+id/image_cutLine_register"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/image_lock_content"
        android:src="@drawable/lock_image" />

    <TextView
        android:id="@+id/textView_password_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image_lock_register"
        android:layout_marginLeft="16dip"
        android:layout_toRightOf="@+id/image_lock_register"
        android:text="@string/textView_password"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_password_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_password_register"
        android:layout_marginLeft="13dp"
        android:layout_toRightOf="@+id/textView_password_register"
        android:background="#00000000"
        android:ems="10"
        android:hint="@string/editText_password"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/image_cutLine2_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/image_lock_register"
        android:layout_below="@+id/image_lock_register"
        android:layout_marginTop="12dp"
        android:background="@drawable/login_cutline"
        android:contentDescription="@string/image_cutLine_content" />

    <TextView
        android:id="@+id/textView_againPwd_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_cutLine2_register"
        android:layout_marginTop="40dip"
        android:text="@string/textView_register_surePwd"
        android:textColor="@color/white"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/editText_againPwd_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_againPwd_register"
        android:layout_marginLeft="13dp"
        android:layout_toRightOf="@+id/textView_againPwd_register"
        android:background="#00000000"
        android:ems="10"
        android:hint="@string/editText_password"
        android:inputType="textPassword" />

    <ImageView
        android:id="@+id/image_cutLine3_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_againPwd_register"
        android:layout_below="@+id/textView_againPwd_register"
        android:layout_marginTop="12dp"
        android:background="@drawable/login_cutline"
        android:contentDescription="@string/image_cutLine_content" />

    <Button
        android:id="@+id/btn_register_register"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_alignLeft="@+id/image_cutLine3_register"
        android:layout_below="@+id/image_cutLine3_register"
        android:layout_marginTop="43dp"
        android:background="@drawable/imagebutton_background"
        android:onClick="RegisterClick"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>