<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="2dp" >

    <ImageView
        android:id="@+id/pic_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_listItem_content" />
    

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="55dip"
        >
        <TextView 
            android:id="@+id/textView_couponPrice_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dip"
            android:textSize="23sp"
            android:textStyle="bold|italic"
            android:textColor="#fe0212"/>
        
        <TextView
            android:id="@+id/textView_originalPrice_information"
            android:layout_width="30dp"
            android:layout_height="15dp"
            android:layout_alignBaseline="@+id/textView_couponPrice_information"
            android:layout_alignBottom="@+id/textView_couponPrice_information"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/textView_couponPrice_information"
            android:background="@drawable/originalprice_del"
            android:textSize="13sp"
            android:textStyle="italic" />
        
        <Button
            android:id="@+id/btn_getOrOthers_information"
            android:layout_width="66dip"
            android:layout_height="50dip"
            android:layout_alignBottom="@+id/textView_couponPrice_information"
            android:layout_alignLeft="@+id/textView_couponPrice_information"
            android:layout_alignTop="@+id/textView_couponPrice_information"
            android:layout_marginLeft="250dip"
            android:layout_toRightOf="@+id/textView_originalPrice_information"
            android:background="@color/transparent"
            android:textColor="@color/white" />
        
        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dip"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@+id/btn_getOrOthers_information"
            android:visibility="gone" />
    </RelativeLayout>
    
    <ImageView 
        android:id="@+id/image_divider_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/information_divider"
        android:contentDescription="@string/image_listItem_content"
        />
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="120dip">
        <TextView 
            android:id="@+id/textView_shopName_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="italic"/>
        <TextView 
            android:id="@+id/textView_couponCotent_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_shopName_information"
            android:layout_marginTop="10dip"
            android:textColor="@color/black"
            />
    </RelativeLayout>
    
    <ImageView 
        android:id="@+id/iamge_divider2_information"
        android:layout_width="match_parent"
        android:layout_height="12dip"
        android:background="@drawable/information_anotherdivider"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="35dip"
        >
        <TextView 
            android:id="@+id/textView_condition_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="@string/information_condition"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="normal"/>
        
        <Button 
            android:id="@+id/btn_forQustionnaire_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/textView_condition_information"
            android:layout_alignBottom="@+id/textView_condition_information"
            android:layout_alignTop="@+id/textView_condition_information"
            android:layout_marginLeft="180dip"
            android:textColor="@color/red"
            android:background="@color/transparent"
            
            />
    </RelativeLayout>
    
    <ImageView 
        android:id="@+id/iamge_divider3_information"
        android:layout_width="match_parent"
        android:layout_height="12dip"
        android:background="@drawable/information_anotherdivider"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:id="@+id/information_textView_rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_textView_rest"
            android:textColor="@color/black"
            />
        <TextView 
            android:id="@+id/information_textView_counts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/information_textView_rest"
            android:layout_alignBottom="@+id/information_textView_rest"
            android:layout_marginLeft="3dip"
            android:textColor="@color/red"
            />
        <TextView 
            android:id="@+id/information_textView_zhang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/information_textView_counts"
            android:text="@string/home_textView_zhang"
            android:textColor="@color/black"
            />
        <TextView 
            android:id="@+id/information_textView_phoneNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/information_textView_rest"
            android:layout_marginTop="10dip"
            android:text="@string/information_textView_phonNum"
            android:textColor="@color/black"
            />
        <TextView 
            android:id="@+id/information_phoneNumber_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/information_textView_phoneNum"
            android:layout_alignBottom="@+id/information_textView_phoneNum"
            android:textColor="@color/black"
            android:layout_marginLeft="3dip"
            />
        <TextView 
            android:id="@+id/information_textView_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/information_textView_phoneNum"
            android:layout_marginTop="10dip"
            android:text="@string/information_textView_address"
            android:textColor="@color/black"
            />
        <TextView 
            android:id="@+id/information_address_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/information_textView_address"
            android:layout_alignBottom="@+id/information_textView_address"
            android:textColor="@color/black"
            android:layout_marginLeft="3dip"
            />
        <TextView 
            android:id="@+id/information_textView_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/information_textView_address"
            android:layout_marginTop="10dip"
            android:text="@string/information_textView_time"
            android:textColor="@color/black"
            />
        <TextView 
            android:id="@+id/information_time_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/information_textView_time"
            android:layout_alignBottom="@+id/information_textView_time"
            android:layout_marginLeft="3dip"
            android:textColor="@color/black"
            />
    </RelativeLayout>

</LinearLayout>